--- a/assets/css/spg-style.css
+++ b/assets/css/spg-style.css
@@ -10,11 +10,12 @@
     align-items: center;
 }
 
-.social-proof-popup img {
+.social-proof-popup img.spg-product-image {
     width: 50px;
     height: 50px;
     margin-right: 10px;
     border-radius: 5px;
+    object-fit: cover;
 }
 
 .spg-content p {
