Add GPL-2.0-or-later LICENSE file and update license headers

--- a/assets/css/spg-style.css
+++ b/assets/css/spg-style.css
@@ -1,3 +1,10 @@
+/*
+ * Social Proof Generator Styles
+ * Copyright (C) 2025 Muhamad Dendi Purwanto
+ * Licensed under the GNU General Public License v2 or later
+ * License URI: https://www.gnu.org/licenses/gpl-2.0.html
+ */
+ 
 .social-proof-popup {
     position: fixed;
     color: #333;
